[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "backage"
dynamic = ["version"]
description = "Generate self-hosted GitHub Packages metadata indexes."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "ipitio", email = "ipitio@users.noreply.github.com" },
]
dependencies = [
    "httpx>=0.26,<1",
]

[dependency-groups]
dev = [
    "pylint==4.0.5",
    "pyright==1.1.410",
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[project.urls]
Repository = "https://github.com/ipitio/backage"

[project.scripts]
bkg = "bkg_py.cli:entrypoint"

[tool.setuptools.dynamic]
version = { attr = "bkg_py.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bkg_py*"]

[tool.pylint.main]
persistent = false
py-version = "3.12"
source-roots = ["src"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.similarities]
min-similarity-lines = 12

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
    "SIM",
    "C4",
    "PIE",
    "RSE",
    "RET",
    "PERF",
    "FURB",
    "ARG",
    "BLE",
    "PTH",
    "DTZ",
    "ASYNC",
    "LOG",
    "C90",
    "PL",
    "PGH",
    "T10",
    "PT",
    "S",
    "T20",
]

[tool.ruff.lint.per-file-ignores]
"src/bkg_py/commands.py" = ["PLC0415", "T201"]
"src/bkg_py/database_owner_scans.py" = ["S608"]
"src/bkg_py/validation.py" = ["S314", "T201"]
"src/test/test_*.py" = ["PLR2004", "S101"]
"src/test/test_database.py" = ["S608"]
"src/test/test_discovery.py" = ["S105"]
"src/test/test_github.py" = ["S105"]
"src/test/test_rendering.py" = ["S608"]
"src/test/test_state.py" = ["S603", "S607"]

[tool.pyright]
include = ["src/bkg_py", "src/test"]
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
reportDeprecated = "error"
